--- a/revhire-user-service/src/main/resources/application.properties
+++ b/revhire-user-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://revhire-db.cnlwgkdvldnm.us-east-1.rds.amazonaws.com:3306/revhire
-spring.datasource.username=revhire
-spring.datasource.password=revhire4444
+spring.datasource.url=jdbc:mysql://${DB_URL}:${DB_PORT}/revhire
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 server.port=8082
+management.endpoints.web.exposure.include=*
