--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: revhire-user
-          image: CONTAINER_IMAGE
+          image: vamsimalleuserservices
           env:
           - name : DB_URL
             valueFrom: 
