--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
     name: userservice
 spec:
-    type: ClusterIP
+    type: LoadBalancer
     ports:
     - port: 8082 
     selector:
