--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: userservice 
-          image: saruku.azurecr.io/userservice
+          image: saruku.azurecr.io/userservice:66
           ports:
           - containerPort: 8082
